# telegram-antispam

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
bot/: __init__.py  __main__.py  config.py  filters.py  handlers.py  storage.py
