[project]
name = "telegram-antispam"
version = "0.1.0"
description = "Telegram bot for filtering channel comments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.uv]
dev-dependencies = []
